--- a/index.html
+++ b/index.html
@@ -1,46 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164123953-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-164123953-2');
     </script>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/tab.css">
     <meta charset="utf-8">
     <title>レゴで遊んで学ぶ</title>
   </head>
   <body>
-    <p class="guide_area">[<a href="#ID_TITLE">上に戻る</a>] / [<a href="#ID_CONTENTS">目次</a>] / [<a href="#ID_HP">レゴホームページの作り方</a>]</p>
-    <h1 id="ID_TITLE">レゴで遊ぼう、学ぼう</h1>
-    <p>レゴは子供の知育にいいと言われています。
+    <div class="guide_area">
+      <h1 class="guide_area_content" id="ID_TITLE">レゴで遊ぼう、学ぼう</h1>
+    </div>
+    <p id="ID_BASE" class="base_position">レゴは子供の知育にいいと言われています。
       きっと、脳で考えたものを、指先を動かして創り上げていくからでしょう。</p>
       <img class="w300" src="./images/先生03.jpg" alt="レゴの写真">
-    <p>このサイトは、レゴの作品やレゴで遊んでいるうちに学んだことを共有するページにしたいと思っています。</p>
-    <p>楽しんでいただければ幸いです。</p>
-    <h2 id="ID_CONTENTS">目次</h2>
-    <ol>
-      <li><a href="#ID_PICTURES">レゴ写真</a></li>
-      <li><a href="#ID_ANIMATION">レゴアニメーション</a></li>
-      <li><a href="#ID_HP">レゴホームページの作り方</a></li>
-    </ol>
-    <h2 id="ID_PICTURES">レゴ写真</h2>
-    <img class="w300" src="./images/親子01.jpg" alt="親子写真">
-    <img class="w300" src="./images/トイストーリー01.jpg" alt="トイストーリ">
-    <img class="w300" src="./images/泥棒と警察01.jpg" alt="泥棒と警察">
-    <h2 id="ID_ANIMATION">レゴアニメーション</h2>
-    <p>ストップアニメーションと呼ばれている静止画をつなげて作ったアニメーションです。</p>
-    <img class="w300" src="./images/タケコプター01.gif" alt="タケコプター">
-    <h2 id="ID_HP">レゴホームページの作り方</h2>
-    <p>本ホームページの作り方をまとめました。
-      ゼロから作り上げたその過程をお楽しみ頂ければと思います。</p>
-    <ol>
-      <li><a href="./contents/step01/index.html">まずはHTMLで文章を書いてみる</a></li>
-    </ol>
-    <img class="w300 image01" src="./images/先生01.jpg" alt="先生">
+    <p>このサイトは、レゴの作品やレゴで遊んでいるうちに学んだことを共有するページにしたいと思っています。
+    楽しんでいただければ幸いです。</p>
+    <hr>
+    <div id="ID_TABS" class="tabs">
+      <input id="ID_PICTURES" type="radio" name="tab_item" checked>
+      <label class="tab_item" for="ID_PICTURES">レゴ写真館</label>
+      <input id="ID_ANIMATIONS" type="radio" name="tab_item">
+      <label class="tab_item" for="ID_ANIMATIONS">レゴアニメーション</label>
+      <input id="ID_HP" type="radio" name="tab_item">
+      <label class="tab_item" for="ID_HP">HPの作り方</label>
+      <div class="tab_content" id="ID_PICTURES_CONTENTS">
+        <div class="tab_content_description">
+          <h2>レゴ写真館</h2>
+          <img class="w300" src="./images/親子01.jpg" alt="親子写真">
+          <img class="w300" src="./images/トイストーリー01.jpg" alt="トイストーリ">
+          <img class="w300" src="./images/泥棒と警察01.jpg" alt="泥棒と警察">
+        </div>
+      </div>
+      <div class="tab_content" id="ID_ANIMATIONS_CONTENTS">
+        <div class="tab_content_description">
+          <h2>レゴアニメーション</h2>
+          <p>ストップアニメーションと呼ばれている静止画をつなげて作ったアニメーションです。</p>
+          <img class="w300" src="./images/タケコプター01.gif" alt="タケコプター">
+        </div>
+      </div>
+      <div class="tab_content" id="ID_HP_CONTENT">
+        <div class="tab_content_description">
+          <h2>レゴホームページの作り方</h2>
+          <p>本ホームページの作り方をまとめました。
+            ゼロから作り上げたその過程をお楽しみ頂ければと思います。</p>
+          <ol>
+            <li><a href="./contents/step01/index.html">まずはHTMLで文章を書いてみる</a></li>
+          </ol>
+          <img class="w300 image01" src="./images/先生01.jpg" alt="先生">
+        </div>
+      </div>
+    </div>
+    <p class="guide_area_bottom">[<a href="#ID_BASE">TOPに戻る</a>]</p>
   </body>
 </html>
