--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             ゼロから作り上げたその過程をお楽しみ頂ければと思います。</p>
           <ol>
             <li><a href="./contents/step01/index.html">まずはHTMLで文章を書いてみる</a></li>
+            <li><a href="./contents/step02/index.html">文字に色を付けてみる</a></li>
           </ol>
           <img class="w300 image01" src="./images/先生01.jpg" alt="先生">
         </div>
