--- a/contents/step01/index.html
+++ b/contents/step01/index.html
@@ -26,6 +26,7 @@
     <h2>実際のページへのリンク</h2>
     <p>実際に作成されたページは<a href="./step01.html">こちら</a></p>
     <a href="./step01.html"><img class="w300" src="../../images/先生02.jpg" alt="こちら"></a>
+    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/step01/step01.html">こちら</a></p>
 
     <h2>簡単な解説</h2>
     <h3>ドキュメントタイプの宣言</h3>
