--- a/contents/step02/index.html
+++ b/contents/step02/index.html
@@ -17,14 +17,15 @@
     </pre>
 
     <h2>実際のページへのリンク</h2>
-    <p>実際に作成されたページは<a href="./step01.html">こちら</a></p>
+    <p>実際に作成されたページは<a href="./step02.html">こちら</a></p>
     <a href="./step02.html"><img class="w300" src="../../images/先生02.jpg" alt="こちら"></a>
+    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/step02/step02.html">こちら</a></p>
 
     <h2>CSSを使った文字の装飾</h2>
     <p>これは難しそうなので別途やります。</p>
 
     <h2>感想</h2>
-    <p>文字に色を付けるだけなら簡単でした。この調子で学んでいきます。</p>
+    <p>文字に色を付けるだけなら簡単でした。この調子でどんどん学んでいきます。</p>
     <img class="w300" src="../../images/先生03.jpg" alt="さようなら">
 
     <br><br>
