--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <li><a href="./contents/step01/index.html">まずはHTMLで文章を書いてみる</a></li>
             <li><a href="./contents/step02/index.html">文字に色を付けてみる</a></li>
             <li><a href="./contents/step03/index.html">色について学んでみる</a></li>
+            <li><a href="./contents/step04/index.html">文字サイズについて学んでみる</a></li>
           </ol>
           <img class="w300 image01" src="./images/先生01.jpg" alt="先生">
         </div>
