--- a/contents/step02/index.html
+++ b/contents/step02/index.html
@@ -11,8 +11,7 @@
 
     <h2>font color</h2>
     <p>fontタグのcolorプロパティを使うことで簡単に文字に色が付けられました。</p>
-    <pre class="code01">
-      <code class="test">
+    <pre class="code01"><code>
  &lt;font color="red"&gt;レゴ&lt;/font&gt;</code>
     </pre>
 
