--- a/contents/step03/index.html
+++ b/contents/step03/index.html
@@ -10,7 +10,7 @@
     <h1 id="ID_TITLE">STEP03 どんな色があるのか</h1>
     <p>HTMLでは色をR(赤)、G(緑)、B(青)を使って#[R][G][B]のように表現するようです。
       例えばこのように。</p>
-    <pre class="code01"><code class="test">
+    <pre class="code01"><code>
    &lt;font color=#F00&gt;レゴ&lt;/font&gt;</code>
     </pre>
     <p>表記は16進数です。なので"F"は16を示します。すこしややこしいですが、とにかく#[R][G][B]と覚えておけば問題なさそうです。</p>
