--- a/contents/step05/index.html
+++ b/contents/step05/index.html
@@ -86,8 +86,8 @@
       <script>
         var id = "ID_NOTE1";
         var titles = ["tag", "margin", "padding"];
-        var tags = ["HTML", "BODY", "H1", "H2", "P", "DIV"];
-        check_style(id, titles, tags);
+        var targets = ["ID_HTML", "ID_BODY", "ID_H1", "ID_H2", "ID_P", "ID_DIV"];
+        check_property(id, titles, targets);
       </script>
     </div>
 
@@ -96,8 +96,8 @@
       <script>
         var id = "ID_NOTE2";
         var titles = ["tag", "font-size", "height", "font-weight", "border", "width"];
-        var tags = ["HTML", "BODY", "H1", "H2", "P", "DIV"];
-        check_style(id, titles, tags);
+        var targets = ["ID_HTML", "ID_BODY", "ID_H1", "ID_H2", "ID_P", "ID_DIV"];
+        check_property(id, titles, targets);
       </script>
     </div>
 
