--- a/contents/step05/step05.html
+++ b/contents/step05/step05.html
@@ -45,8 +45,8 @@
       <script>
         var id = "ID_NOTE";
         var titles = ["tag", "font-size", "height", "padding", "margin", "font-weight", "border", "width"];
-        var tags = ["HTML", "BODY", "H1", "H2", "H3", "H4", "P", "DIV"];
-        check_style(id, titles, tags);
+        var targets = ["ID_HTML", "ID_BODY", "ID_H1", "ID_H2", "ID_H3", "ID_H4", "ID_P", "ID_DIV"];
+        check_property(id, titles, targets);
       </script>
     </div>
 
