--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     </script>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tab.css">
-    <script type="text/javascript" src="./js/style.js"></script>
+    <script type="text/javascript" src="./js/style.js" defer></script>
     <meta charset="utf-8">
-    <title>レゴで遊んで学ぶ</title>
+    <title>Legoで遊びながら初心者がプログラミングを学ぶ</title>
+    <meta name=”description” content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。
+    プログラミングは初心者から中級車向けの情報です。”>
   </head>
   <body id="ID_BODY">
     <div class="top_area">
@@ -24,7 +26,7 @@
           <img class="circle" width=100% src="./images/先生01.jpg" alt="レゴの写真">
         </div>
         <div class="flex_content_area70">
-          <p>レゴは子供の知育にいいと言われています。
+          <p id="ID_P">レゴは子供の知育にいいと言われています。
           きっと、脳で考えたものを、指先を動かして創り上げていくからでしょう。</p>
           <p>このサイトは、レゴの作品やレゴで遊んでいるうちに学んだことを共有するページにしたいと思っています。
           楽しんでいただければ幸いです。</p>
@@ -33,7 +35,7 @@
       <hr>
       <div id="ID_TABS" class="tabs">
         <input id="ID_PICTURES" type="radio" name="tab_item" checked>
-        <label class="tab_item" for="ID_PICTURES">レゴ写真館</label>
+        <label id="ID_TAB_NAME" class="tab_item" for="ID_PICTURES">レゴ写真館</label>
         <input id="ID_ANIMATIONS" type="radio" name="tab_item">
         <label class="tab_item" for="ID_ANIMATIONS">レゴアニメーション</label>
         <input id="ID_HP" type="radio" name="tab_item">
@@ -47,7 +49,7 @@
                 <img width=100% src="./images/親子01.jpg" alt="親子写真">
               </div>
               <div class="flex_content_area70">
-                <p>レゴフレンズのエマとレゴディズニーのエリック君です。</p>
+                <p id="ID_P_TAB">レゴフレンズのエマとレゴディズニーのエリック君です。</p>
               </div>
             </div>
             <div class="flex_contents_area">
@@ -102,7 +104,6 @@
             </div>
           </div>
         </div>
-
       </div>
 
       <hr>
@@ -111,14 +112,16 @@
         <script>
           var id = "ID_NOTE1";
           var titles = ["tag", "font-size", "height", "font-weight", "border", "width", "margin", "padding"];
-          var targets = ["ID_HTML", "ID_BODY", "ID_TITLE"];
+          var targets = ["ID_HTML", "ID_BODY", "ID_TITLE", "ID_P", "ID_TAB_NAME", "ID_P_TAB"];
           check_property(id, titles, targets);
         </script>
       </div>
 
     </div>
 
-    <br><br>
-    <p class="guide_area_bottom">[<a href="#ID_CONTENTS">TOPに戻る</a>]</p>
+    <div>
+      <hr><br><br>
+      <p id="ID_FOOTER" class="guide_area_bottom">[<a href="#ID_CONTENTS">TOPに戻る</a>]</p>
+    </div>
   </body>
 </html>
