--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     </script>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tab.css">
-    <script type="text/javascript" src="./js/style.js" defer></script>
+    <script type="text/javascript" src="./js/style.js"></script>
     <meta charset="utf-8">
     <title>Legoで遊びながら初心者がプログラミングを学ぶ</title>
-    <meta name=”description” content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。
-    プログラミングは初心者から中級車向けの情報です。”>
+    <meta name=”description” content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級車向けの情報です。”>
   </head>
   <body id="ID_BODY">
     <div class="top_area">
@@ -109,7 +108,7 @@
       <hr>
       <h2>このページの設定</h2>
       <div id="ID_NOTE1">
-        <script>
+        <script defer>
           var id = "ID_NOTE1";
           var titles = ["tag", "font-size", "height", "font-weight", "border", "width", "margin", "padding"];
           var targets = ["ID_HTML", "ID_BODY", "ID_TITLE", "ID_P", "ID_TAB_NAME", "ID_P_TAB"];
