--- a/contents/step02/index.html
+++ b/contents/step02/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="../../css/style.css">
     <meta charset="utf-8">
-    <title>文字に色を付けてみる</title>
+    <title>HTMLのfont colorの使い方</title>
   </head>
   <body>
     <h1 id="ID_TITLE">STEP02 文字の装飾</h1>
@@ -27,8 +27,10 @@
     <p>文字に色を付けるだけなら簡単でした。この調子でどんどん学んでいきます。</p>
     <img class="w300" src="../../images/先生03.jpg" alt="さようなら">
 
-    <br><br>
-    <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="../../index.html">HOMEへ戻る</a>]</p>
+    <div>
+      <hr><br><br>
+      <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="../../index.html">HOMEへ戻る</a>]</p>
+    </div>
 
   </body>
 </html>
