--- a/contents/step01/index.html
+++ b/contents/step01/index.html
@@ -60,8 +60,11 @@
     <p>いかがでしょうか。シンプルなページならこんなもんです。でも、まだまだ勉強が必要ですね。</p>
     <img class="w300" src="../../images/先生03.jpg" alt="さようなら">
 
-    <br><br>
-    <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="../../index.html">HOMEへ戻る</a>]</p>
+    <div>
+      <hr><br><br>
+      <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="../../index.html">HOMEへ戻る</a>]</p>
+    </div>
+
 
   </body>
 </html>
