--- a/contents/step03/index.html
+++ b/contents/step03/index.html
@@ -29,8 +29,10 @@
       実際使うときは、各テーブルの角の色だけで十分な気がしますね。</p>
     <img class="w300" src="../../images/先生03.jpg" alt="さようなら">
 
-    <br><br>
-    <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="#ID_CONTENTS">目次に戻る</a>] / [<a href="../../index.html">HOMEへ戻る</a>]</p>
+    <div>
+      <hr><br><br>
+      <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="#ID_CONTENTS">目次に戻る</a>] / [<a href="../../index.html">HOMEへ戻る</a>]</p>
+    </div>
 
   </body>
 </html>
