--- a/contents/step04/index.html
+++ b/contents/step04/index.html
@@ -60,8 +60,10 @@
     <p>パソコンとスマホで印象が違いますが、10ポイントは少し小さいかなと感じました。見やすいように文字サイズを変更したいと思います。</p>
     <img class="w300" src="../../images/先生03.jpg" alt="さようなら">
 
-    <br><br>
-    <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="#ID_CONTENTS">目次に戻る</a>] / [<a href="../../index.html">HOMEへ戻る</a>]</p>
+    <div>
+      <hr><br><br>
+      <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="#ID_CONTENTS">目次に戻る</a>] / [<a href="../../index.html">HOMEへ戻る</a>]</p>
+    </div>
 
   </body>
 </html>
