--- a/contents/step05/index.html
+++ b/contents/step05/index.html
@@ -109,8 +109,10 @@
     <h2>感想</h2>
     <p>個人的にはすごく勉強になりました。デフォルトで設定されている値のせいで意図しないレイアウトになることがよくあります。今回はそれを確認できてよかったです。</p>
 
-    <br><br>
-    <p class="guide_area_bottom">[<a href="#ID_H1">ページ上に戻る</a>] / [<a href="#ID_CONTENTS">目次に戻る</a>] / [<a href="../../index.html">HOMEへ戻る</a>]</p>
+    <div>
+      <hr><br><br>
+      <p class="guide_area_bottom">[<a href="#ID_H1">ページ上に戻る</a>] / [<a href="#ID_CONTENTS">目次に戻る</a>] / [<a href="../../index.html">HOMEへ戻る</a>]</p>
+    </div>
 
   </body>
 </html>
