--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                   <li><a href="./contents/step03/index.html">色について学んでみる</a></li>
                   <li><a href="./contents/step04/index.html">文字サイズについて学んでみる</a></li>
                   <li><a href="./contents/step05/index.html">レイアウトについて学んでみる</a></li>
+                  <li><a href="./contents/reference/index.html">参考ページのリンク集</a></li>
                 </ol>
               </div>
             </div>
