--- a/contents/github_pages/step02/index.html
+++ b/contents/github_pages/step02/index.html
@@ -6,7 +6,10 @@
     <title></title>
   </head>
   <body>
-    <h2>サイトマップ</h2>
+    <h2>サイトマップの作り方</h2>
     <a href="https://help.github.com/ja/enterprise/2.14/user/articles/sitemaps-for-github-pages">サイトマップ</a>
+    <h2>サイトマップの確認方法</h2>
+    <p>[自分のサイトのURL]/sitemap.xml にアクセス</p>
+    <a href="https://lego-san.github.io/sitemap.xml">https://lego-san.github.io/sitemap.xml</a>
   </body>
 </html>
