--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               ゼロから作り上げたその過程をお楽しみ頂ければと思います。</p>
             <div class="flex_contents_area">
               <div class="flex_content_area30">
-                <img width=100% src="./images/先生02.jpg" alt="先生">
+                <a href="./contents/index.html"><img width=100% src="./images/先生02.jpg" alt="先生"></a>
               </div>
               <div class="flex_content_area70">
                 <ol>
