--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <div>
       <hr><br><br>
-      <p id="ID_FOOTER" class="guide_area_bottom">[<a href="#ID_CONTENTS">TOPに戻る</a>]</p>
+      <p id="ID_FOOTER" class="guide_area_bottom">[<a href="#ID_CONTENTS">TOPに戻る</a>] / [<a href="./privacy_policy/index.html">プライバシーポリシー</a>]</p>
     </div>
   </body>
 </html>
