--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta charset="utf-8">
     <title>Legoで遊びながら初心者がプログラミングを学ぶ</title>
     <meta name=”description” content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級車向けの情報です。”>
+    <script data-ad-client="ca-pub-1887985620435579" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body id="ID_BODY">
     <div class="top_area">
