--- a/contents/index.html
+++ b/contents/index.html
@@ -12,6 +12,7 @@
       <li><a href="./github_pages/index.html">GitHub Pagesを学ぶ</a></li>
       <li><a href="./google_search_console/index.html">Google Search Consoleを学ぶ</a></li>
       <li><a href="./git/index.html">Gitを学ぶ</a></li>
+      <li><a href="./google_adsense/index.html">Googleアドセンスを学ぶ</a></li>
       <li><a href="./reference/index.html">外部参照サイトまとめ</a></li>
     </ol>
 
