--- a/contents/html/step04/index.html
+++ b/contents/html/step04/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="../../css/style.css">
-    <script type="text/javascript" src="../../js/font_size.js"></script>
+    <link rel="stylesheet" href="../../../css/style.css">
+    <script type="text/javascript" src="../../../js/font_size.js"></script>
     <meta charset="utf-8">
-    <title>文字サイズについて学んでみる</title>
+    <title>HTMLの文字サイズについて学んでみる</title>
   </head>
   <body>
-    <h1 id="ID_TITLE">STEP04 文字のサイズ</h1>
+    <h1 id="ID_TITLE">文字サイズについて学んでみる</h1>
     <p>HTTPを勉強していて気になったこと。パソコンで見たときとスマホで見たときで最適な文字サイズは違うのだろうか？
     ちょっとよくわからなかったので試してみます。</p>
-    <img class="w300" src="../../images/先生02.jpg" alt="色々">
+    <img width=300px src="../../../images/先生01.jpg" alt="色々">
 
     <h2 id="ID_CONTENTS">目次</h2>
     <ol>
@@ -56,9 +56,14 @@
       </script>
     </div>
 
+    <h2 id="ID_SRC">今回作成したページのHTMLコード</h2>
+    <p>実際に作成したページは<a href="./step04.html">こちら</a></p>
+    <img width=300px src="../../../images/先生02.jpg" alt="こちら">
+    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step04/step04.html">こちら</a></p>
+
     <h2>感想</h2>
     <p>パソコンとスマホで印象が違いますが、10ポイントは少し小さいかなと感じました。見やすいように文字サイズを変更したいと思います。</p>
-    <img class="w300" src="../../images/先生03.jpg" alt="さようなら">
+    <img width=300px src="../../../images/先生03.jpg" alt="さようなら">
 
     <div>
       <hr><br><br>
