--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
                   <li><a href="./contents/step01/index.html">まずはHTMLで文章を書いてみる</a></li>
                   <li><a href="./contents/step02/index.html">文字に色を付けてみる</a></li>
                   <li><a href="./contents/step03/index.html">色について学んでみる</a></li>
-                  <li><a href="./contents/step04/index.html">文字サイズについて学んでみる</a></li>
+                  <li><a href="./contents/html/step04/index.html">文字サイズについて学んでみる</a></li>
                   <li><a href="./contents/step05/index.html">レイアウトについて学んでみる</a></li>
+                  <li><a href="./contents/html/step06/index.html">画像の張り方について学んでみる</a></li>
                   <li><a href="./contents/reference/index.html">参考ページのリンク集</a></li>
                 </ol>
               </div>
