--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="ID_HTML" lang="en" dir="ltr">
+<html id="ID_HTML" xmlns:og="https://lego-san.github.io/ns#" lang="en" dir="ltr">
   <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164123953-2"></script>
     <script>
@@ -13,7 +13,12 @@
     <script type="text/javascript" src="./js/style.js"></script>
     <meta charset="utf-8">
     <title>Legoで遊びながら初心者がプログラミングを学ぶ</title>
-    <meta name=”description” content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級車向けの情報です。”>
+    <meta property="og:title" content="Legoで遊びながら初心者がプログラミングを学ぶ">
+    <meta property="og:type" content="websites">
+    <meta property="og:image" content="./images/先生01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/">
+    <meta property="og:description" content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級車向けの情報です。”>
+    <meta property="og:site_name" content="Legoで遊びながら初心者がプログラミングを学ぶ">
     <script data-ad-client="ca-pub-1887985620435579" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body id="ID_BODY">
