--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="ID_HTML" xmlns:og="https://lego-san.github.io/ns#" lang="en" dir="ltr">
+<html id="ID_HTML" prefix="og: http://ogp.me/ns#" lang="ja" dir="ltr">
   <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164123953-2"></script>
     <script>
