--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <title>Legoで遊びながら初心者がプログラミングを学ぶ</title>
     <meta property="og:title" content="Legoで遊びながら初心者がプログラミングを学ぶ">
     <meta property="og:type" content="websites">
-    <meta property="og:image" content="https://lego-san.github.io/images/先生01.jpg">
+    <!--meta property="og:image" content="https://lego-san.github.io/images/先生01.jpg" /-->
+    <meta property="og:image" content="https://image.space.rakuten.co.jp/d/strg/ctrl/4/892c0edd72b77ed570f96483f5635a6669a61601.58.2.4.2.jpg" />
     <meta property="og:url" content="https://lego-san.github.io/">
+    <meta name="description" content=”レゴ遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級車向けの情報です。”>
     <meta property="og:description" content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級車向けの情報です。”>
     <meta property="og:site_name" content="Legoで遊びながら初心者がプログラミングを学ぶ">
     <script data-ad-client="ca-pub-1887985620435579" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
