--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <meta charset="utf-8">
     <title>Legoで遊びながら初心者がプログラミングを学ぶ</title>
     <meta property="og:title" content="Legoで遊びながら初心者がプログラミングを学ぶ">
-    <!--meta property="og:type" content="websites"-->
-    <meta property="og:type" content="article">
+    <meta property="og:type" content="websites">
     <meta property="og:image" content="https://lego-san.github.io/images/先生01.jpg">
     <meta property="og:url" content="https://lego-san.github.io/">
     <meta property="og:description" content=”Lego遊びを通じて写真・Gifアニメーション・HTML・プログラミングを学んでます。プログラミングは初心者から中級車向けの情報です。”>
@@ -123,6 +122,8 @@
                   <li><a href="./contents/html/step04/index.html">文字サイズについて学んでみる</a></li>
                   <li><a href="./contents/step05/index.html">レイアウトについて学んでみる</a></li>
                   <li><a href="./contents/html/step06/index.html">画像の張り方について学んでみる</a></li>
+                  <li><a href="./contents/html/step07/index.html">GIFアニメーションを張り付けてみる</a></li>
+                  <li><a href="./contents/html/step08/index.html">MP4を再生してみる</a></li>
                   <li><a href="./contents/reference/index.html">参考ページのリンク集</a></li>
                 </ol>
               </div>
