--- a/contents/html/step08/step08.html
+++ b/contents/html/step08/step08.html
@@ -10,6 +10,6 @@
     <p>Gifアニメーションも掲載します。</p>
     <img src="../../../images/強風01.gif" alt="強風アニメーション">
     <p>ビデオ動画も掲載します。</p>
-    <video src="../step08/images/テストファイル.mp4" controls playsinline></video>
+    <video src="../step08/images/テストファイル.mp4" controls playsinline muted></video>
   </body>
 </html>
