--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
                   <li><a href="./contents/html/step06/index.html">画像の張り方について学んでみる</a></li>
                   <li><a href="./contents/html/step07/index.html">GIFアニメーションを張り付けてみる</a></li>
                   <li><a href="./contents/html/step08/index.html">MP4を再生してみる</a></li>
+                  <li><a href="./contents/html/step09/index.html">表を作ってみる</a></li>
+                  <li><a href="./contents/html/border-style/border-style.html">いろんな種類の枠線を使ってみる</a></li>
                   <li><a href="./contents/reference/index.html">参考ページのリンク集</a></li>
                 </ol>
               </div>
