--- a/contents/google_adsense/index.html
+++ b/contents/google_adsense/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>GitHub Pages学習</h1>
     <ol>
-      <li><a href="./step02/index.html">サイトマップの作り方</a></li>
+      <li><a href="./step01/index.html">Google Adsenseの申請方法</a></li>
     </ol>
 
     <div>
