--- a/contents/html/border-style/border-style.html
+++ b/contents/html/border-style/border-style.html
@@ -81,7 +81,7 @@
 
     <h2 id="ID_SRC">今回作成したページのHTMLコード</h2>
     <p>実際に作成したページは<a href="../step/step10.html">こちら</a></p>
-    <img style="width:300px;" src="../../../images/先生02.jpg" alt="こちら">
+    <img style="width:300px;" src="../../../icon/先生02.jpg" alt="こちら">
     <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step/step10.html">こちら</a></p>
 
     <h2>感想</h2>
