--- a/contents/html/index.html
+++ b/contents/html/index.html
@@ -6,8 +6,20 @@
     <title>サイトマップHTML学習編</title>
   </head>
   <body>
-    <h1>メンテ中です。</h1>
-    <p>TOP画面を確認してください。<a href="../../index.html">[TOPへ戻る]</a></p>
+    <h1>HTMLを学ぶ</h1>
+    <ol>
+      <li><a href="./step01/index.html">まずはHTMLで文章を書いてみる</a></li>
+      <li><a href="./step02/index.html">文字に色を付けてみる</a></li>
+      <li><a href="./step03/index.html">色について学んでみる</a></li>
+      <li><a href="./step04/index.html">文字サイズについて学んでみる</a></li>
+      <li><a href="./step05/index.html">レイアウトについて学んでみる</a></li>
+      <li><a href="./step06/index.html">画像の張り方について学んでみる</a></li>
+      <li><a href="./step07/index.html">GIFアニメーションを張り付けてみる</a></li>
+      <li><a href="./step08/index.html">MP4を再生してみる</a></li>
+      <li><a href="./step09/index.html">表を作ってみる</a></li>
+      <li><a href="./border-style/border-style.html">いろんな種類の枠線を使ってみる</a></li>
+      <li><a href="./reference/index.html">参考ページのリンク集</a></li>
+    </ol>
 
     <div>
       <hr><br><br>
