--- a/contents/html/step/step10.html
+++ b/contents/html/step/step10.html
@@ -19,9 +19,9 @@
       </tr>
     </table>
     <p><font size="5" color="red">レゴ</font>で遊んだ写真を掲載します。</p>
-    <img src="../../../images/先生01.jpg" alt="先生の画像">
+    <img src="../../../icon/先生01.jpg" alt="先生の画像">
     <p>Gifアニメーションも掲載します。</p>
-    <img src="../../../images/強風01.gif" alt="強風アニメーション">
+    <img src="../../images/animations/強風01.gif" alt="強風アニメーション">
     <p>ビデオ動画も掲載します。</p>
     <video src="../step08/images/テストファイル.mp4" controls playsinline muted></video>
   </body>
