--- a/contents/html/step06/index.html
+++ b/contents/html/step06/index.html
@@ -18,30 +18,30 @@
     <p>画像を張り付けるときはimgタグを使えばいいようです。</p>
     <pre class="code01"><code><br> &lt;img src="サンプル画像.jpg"&gt;
     </code></pre>
-    <img src="../../../images/先生01.jpg" alt="サンプル画像">
+    <img src="../../../icon/先生01.jpg" alt="サンプル画像">
 
     <h2 id="ID_H2_02">画像サイズの変更 ピクセル指定</h2>
     <p>画像サイズはwidthで変更できます。</p>
     <pre class="code01"><code><br> &lt;img width=100px src="サンプル画像.jpg"&gt;
     </code></pre>
-    <img width=100px src="../../../images/先生01.jpg" alt="サンプル画像">
+    <img width=100px src="../../../icon/先生01.jpg" alt="サンプル画像">
     <pre class="code01"><code><br> &lt;img width=200px src="サンプル画像.jpg"&gt;
     </code></pre>
-    <img width=200px src="../../../images/先生01.jpg" alt="サンプル画像">
+    <img width=200px src="../../../icon/先生01.jpg" alt="サンプル画像">
 
     <h2 id="ID_H2_03">画像サイズの変更 パーセンテージ指定</h2>
     <p>画像サイズは%でも指定できます。</p>
     <pre class="code01"><code><br> &lt;img width=50% src="サンプル画像.jpg"&gt;
     </code></pre>
-    <img width=50% src="../../../images/先生01.jpg" alt="サンプル画像">
+    <img width=50% src="../../../icon/先生01.jpg" alt="サンプル画像">
     <pre class="code01"><code><br> &lt;img width=20% src="サンプル画像.jpg"&gt;
     </code></pre>
-    <img width=20% src="../../../images/先生01.jpg" alt="サンプル画像">
+    <img width=20% src="../../../icon/先生01.jpg" alt="サンプル画像">
 
     <h2 id="ID_SRC">今回作成したページのHTMLコード</h2>
-    <p>実際に作成したページは<a href="./step06.html">こちら</a></p>
-    <img width=300px src="../../../images/先生02.jpg" alt="こちら">
-    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step06/step06.html">こちら</a></p>
+    <p>実際に作成したページは<a href="../step/step06.html">こちら</a></p>
+    <img width=300px src="../../../icon/先生02.jpg" alt="こちら">
+    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step/step06.html">こちら</a></p>
 
     <h2>感想</h2>
     <p>画像の貼り付けは意外と簡単でしたね。引き続き学んでいきましょう。</p>
