--- a/contents/html/step07/index.html
+++ b/contents/html/step07/index.html
@@ -71,9 +71,9 @@
     <p>ファイル容量は違いますけど、動きに差はないですね。。。あたりまえでしたね。</p>
 
     <h2 id="ID_SRC">今回作成したページのHTMLコード</h2>
-    <p>実際に作成したページは<a href="./step07.html">こちら</a></p>
-    <img width=300px src="../../../images/先生02.jpg" alt="こちら">
-    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step07/step07.html">こちら</a></p>
+    <p>実際に作成したページは<a href="../step/step07.html">こちら</a></p>
+    <img width=300px src="../../../icon/先生02.jpg" alt="こちら">
+    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step/step07.html">こちら</a></p>
 
     <h2>感想</h2>
     <p>HTMLでの表示の仕方は、静止画とGifで違いはありませんでした。</p>
