--- a/contents/html/step08/index.html
+++ b/contents/html/step08/index.html
@@ -118,9 +118,9 @@
     </table>
 
     <h2 id="ID_SRC">今回作成したページのHTMLコード</h2>
-    <p>実際に作成したページは<a href="./step08.html">こちら</a></p>
-    <img width=300px src="../../../images/先生02.jpg" alt="こちら">
-    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step08/step08.html">こちら</a></p>
+    <p>実際に作成したページは<a href="../step/step08.html">こちら</a></p>
+    <img width=300px src="../../../icon/先生02.jpg" alt="こちら">
+    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step/step08.html">こちら</a></p>
 
     <h2>感想</h2>
     <p>動画の再生ができるようになりました。あとは動画のコンテンツを整えないといけませんね。</p>
